# contact-rich-manipulation

./: .gitignore  .gitmodules  README.md  requirement.txt
robot_ws/install/: local_setup.sh  setup.sh
robot_ws/log/: latest_build
robot_ws/src/arduino/main/: constants.h  globals.h  main.ino  motor_control.cpp  motor_control.h  parameters.h  pins.h  state_machine.cpp  state_machine.h  states.cpp  states.h  vacuum.cpp  vacuum.h  vacuum.ino
robot_ws/src/arduino/main/example/: combined_motor_control.ino  test_main.ino
robot_ws/src/arduino/main/example/relay/: relay.ino
robot_ws/src/arduino/mega/: constants.h  globals.h  main.ino  servo_motor.ino
robot_ws/src/control/: CMakeLists.txt  package.xml
robot_ws/src/control/include/: control_node.hpp
robot_ws/src/control/include/behavior/: behavior.hpp  diffdrive_behavior.hpp  diffdrivefsm_behavior.hpp
robot_ws/src/control/include/control_input/: ackermann_control_input.hpp  control_input.hpp  diffdrive_control_input.hpp
robot_ws/src/control/include/controllers/: pid_controller.hpp
robot_ws/src/control/include/dynamics/: ackermann_dynamics.hpp  bicycle_kinemtics.hpp  diffdrive_dynamics.hpp  dynamics.hpp  model_base.hpp
robot_ws/src/control/include/hardware_interface/: actuator_command.hpp  fake_motor_interface.hpp  micro_ros_motor_interface.hpp  motor_interface.hpp
robot_ws/src/control/include/integration/: explicit_midpoint.hpp  forward_euler.hpp  forward_euler_integration.hpp  forward_rk4.hpp  forward_rk4_integration.hpp  implicit_midpoint.hpp  integration.hpp
robot_ws/src/control/include/integrators/: integrator_base.hpp
robot_ws/src/control/include/model/: bicycle_kinemtics.hpp  input.hpp
robot_ws/src/control/include/state/: ackermann_state.hpp  bicycle_state.hpp  bicycle_state_2d.hpp  diffdrive_state.hpp  state.hpp
robot_ws/src/control/include/utils/: math.hpp
robot_ws/src/control/src/behavior/: diffdrive_behavior.cpp  diffdrivefsm_behavior.cpp
robot_ws/src/control/src/controllers/: main_diffdrivefsm_controller.cpp  pid_controller.cpp
robot_ws/src/control/src/dynamics/: ackermann_dynamics.cpp  diffdrive_dynamics.cpp
robot_ws/src/control/src/state_machine/: diffdrive_behavior.cpp
robot_ws/src/control/test/: test_bicycle_kinematics_2d.cpp  test_control_input.cpp  test_dynamics.cpp  test_forward_euler.cpp  test_state.cpp
robot_ws/src/hardware_interface/: package.xml
robot_ws/src/localization/: package.xml
robot_ws/src/mapping/: package.xml
robot_ws/src/msgs/: CMakeLists.txt  package.xml
robot_ws/src/msgs/include/msgs/: sensor_data.hpp
robot_ws/src/msgs/srv/: PlanMotion.srv
robot_ws/src/planning/: CMakeLists.txt  package.xml
robot_ws/src/planning/include/planning/: motion_client.hpp  motion_server.hpp  simple_motion_planner.hpp
robot_ws/src/planning/src/: motion_client.cpp  motion_server.cpp  simple_motion_planner.cpp
simulation/mujoco/: example_ur10e.py
(+5 files in other folders)
